Update history dialog caption when contact is changed

BUG:125875

svn path=/branches/kopete/0.12/kopete/; revision=531499